@@ -1,4 +1,4 @@
-DIST esniper-2-19-0.tgz 110571 RMD160 004d67d558ccec5fb1626671c3d3ca4d7bf86b56 SHA1 eee1e30f68e889dafdb896c691f88ba1ae0e1d55 SHA256 354475f629081f1090988aef40d6bcf0d887066a6f97c691f711e708f2ef8c14
-EBUILD esniper-2.19.0.ebuild 790 RMD160 53d5c1fdb36d3c766eca6cc977007871183bb781 SHA1 e58a7106a4dbbd702d08a2c63dcbb9ce69fe5299 SHA256 44107ed4bc5722b323bae16f0521dcbab6c6927eebd9076f8ce1a4fa06113cd7
-MISC ChangeLog 480 RMD160 f4e31e14cb9bfec9c29122195ac5fe01fd14d698 SHA1 461c63b1f571008000eb2f1f80172eaf466eab59 SHA256 04e557512766af55941dfe7ef9e46e9740db3f32de28687605a2a491ea9d0b2f
+DIST esniper-2-22-0.tgz 126971 RMD160 9b40a58b9b7db691dcfd89630b559fa9163976f6 SHA1 191f6352d37adceffc59307676b1850858c8aa9c SHA256 48725b37104d78e8d114e93f82512b61a3cda3d68b7d901e41b6656454907881
+EBUILD esniper-2.22.0.ebuild 838 RMD160 8d59584110e7503ed91a4d74297a9d3cd2da86e8 SHA1 d6fa3f52c483f27440c54f049154e0685f864c33 SHA256 889bb01eeefb7ab77c39edb154d4419f2458bc2d1a3c68bf57d37952adee8cdd
+MISC ChangeLog 659 RMD160 227f645c033df35bc1008e3a3d8dfc3856f48b12 SHA1 64a07b949c0da57a28c29612adfbb48893e3524c SHA256 31715fd94b68c10cb41708169ddfd3d9cda9e1031b3c1a3384c784a5153a3786
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
